# ports-info

./: README.md  __init__.py  io.github.mfat.portsinfo.desktop  io.github.mfat.portsinfo.metainfo.xml  io.github.mfat.portsinfo.policy  io.github.mfat.portsinfo.yml  main.py  meson.build  netstat.js  org.mfat.portmonitor.desktop  org.mfat.portmonitor.metainfo.xml  org.mfat.portmonitor.xml  org.mfat.portmonitor.yml  package-lock.json  package.json  portmonitor-aly.py  portmonitor.spec  ports-info.spec  portsmonitor.py  requirements.txt  setup.py
.flatpak-builder/cache/refs/heads/x86_64-io.github.mfat.portsinfo.yml/: build-ports-info  build-python3-gobject  cleanup  finish  init
.flatpak-builder/checksums/: x86_64-io.github.mfat.portsinfo.yml
.flatpak-builder/downloads/426008b2dad548c9af1c7b03b59df0440fde5c33f38fb5406b103a43d653cafc/: pygobject-3.46.0.tar.xz
.flatpak-builder/git/https_github.com_mfat_ports-info.git/: FETCH_HEAD  config  shallow
.flatpak-builder/git/https_github.com_mfat_ports-info.git/refs/heads/: main
debian/: changelog  control  copyright  rules
ports/: main.py
repo/: summary  summary.idx
repo/summaries/: 209d90107b3ba58286979d1ca549a97b42337f253817a528ced067edab2532e6-7aa2bea72a014e122bcf8c40f7f1af9bef0f0ebcc0e74a878a43b593476e0134.delta  5093f3d2a2f30dacf9e30d148455d9f1f7e8269c7e680745e02b8aacd581800e-7aa2bea72a014e122bcf8c40f7f1af9bef0f0ebcc0e74a878a43b593476e0134.delta  972125b290bdd64d7f33cbcfea0325fd055065a5bb2f2f2c80c58b0385e6563d-7aa2bea72a014e122bcf8c40f7f1af9bef0f0ebcc0e74a878a43b593476e0134.delta
src/: App.vue
(+8 files in other folders)
